# disquiet

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
disquiet0415/: AnalyzeVoice.ipynb  make-lyrics.sh
disquiet0419/: ChoralSynthesis.ipynb  convertOriginal.py  pitchesForSamples.py
disquiet0422/: Midi Speeder DQ422.ipynb
disquiet0425/: Crop Circles.ipynb
disquiet0433/: CMakeLists.txt  dq0433.cpp  dq0433.h  feedback_drums.cpp  gomac.sh
